--- a/.github/workflows/next_js_ci_cd.yml
+++ b/.github/workflows/next_js_ci_cd.yml
@@ -15,6 +15,11 @@ jobs:
     steps:
     - name: Go to source code directory
       run: cd /var/www/practice-ci-cd/
+      run: git reset --hard
+    - name: Repo Status
+      run: git status
+    - name: Add all the files
+      run: git add .
     - name: Pull from repo
       run: sudo git pull origin main
     - name: Build
