--- a/.github/workflows/next_js_ci_cd.yml
+++ b/.github/workflows/next_js_ci_cd.yml
@@ -16,12 +16,12 @@ jobs:
       uses: actions/checkout@v2
       with:
         ref: main
-        path: /var/www/practice-ci-cd
+        path: app
     - name: root user
       run : sudo su
     - name: Build and test
       run: |
-        cd /var/www/practice-ci-cd
+        cd app
         npm install
         npm run build
       
