--- a/.github/workflows/next_js_ci_cd.yml
+++ b/.github/workflows/next_js_ci_cd.yml
@@ -19,6 +19,10 @@ jobs:
         path: app
     - name: root user
       run : sudo su
+    - name: Install Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14.x'
     - name: Build and test
       run: |
         cd app
